--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-responsive-carousel": "^3.2.20"
+    "react-responsive-carousel": "^3.2.20",
+    "sass": "^1.36.0"
   },
   "devDependencies": {
     "@types/react": "17.0.15",
