--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.32.0",
     "react-responsive-carousel": "^3.2.20",
     "sass": "^1.36.0"
   },
