--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "embla-carousel": "^4.5.3",
     "framer-motion": "^4.1.17",
     "next": "11.0.1",
+    "object-hash": "^2.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.32.0",
@@ -22,6 +23,7 @@
     "sass": "^1.36.0"
   },
   "devDependencies": {
+    "@types/object-hash": "^2.1.1",
     "@types/react": "17.0.15",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
