--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^4.1.17",
     "next": "11.0.1",
     "object-hash": "^2.2.0",
+    "popmotion": "^9.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-intersection-observer": "^8.32.0",
