--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "object-hash": "^2.2.0",
     "popmotion": "^9.4.0",
     "react": "17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
+    "react-draggable": "^4.4.3",
     "react-intersection-observer": "^8.32.0",
     "react-responsive-carousel": "^3.2.20",
     "sass": "^1.36.0"
