--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass": "^1.36.0"
   },
   "devDependencies": {
+    "@iconify/react": "^3.0.0-beta.1",
     "@types/object-hash": "^2.1.1",
     "@types/react": "17.0.15",
     "eslint": "7.31.0",
