--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^1.6.5",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "cookie": "^0.4.1",
     "embla-carousel": "^4.5.3",
     "framer-motion": "^4.1.17",
     "next": "11.0.1",
@@ -20,12 +21,14 @@
     "popmotion": "^9.4.0",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
     "react-draggable": "^4.4.3",
     "react-intersection-observer": "^8.32.0",
     "react-responsive": "^9.0.0-beta.3",
     "react-responsive-carousel": "^3.2.20",
-    "sass": "^1.36.0"
+    "sass": "^1.36.0",
+    "use-persisted-state": "^0.3.3"
   },
   "devDependencies": {
     "@iconify/react": "^3.0.0-beta.1",
