--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "embla-carousel": "^4.5.3",
     "framer-motion": "^4.1.17",
     "next": "11.0.1",
+    "next-compose-plugins": "^2.2.1",
+    "next-optimized-images": "^2.6.2",
     "object-hash": "^2.2.0",
     "popmotion": "^9.4.0",
     "react": "17.0.2",
@@ -36,6 +38,17 @@
     "@types/react": "17.0.15",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
-    "typescript": "4.3.5"
+    "image-trace-loader": "^1.0.2",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^9.0.0",
+    "jimp": "^0.16.1",
+    "lqip-loader": "^2.2.1",
+    "responsive-loader": "^2.0.0",
+    "sharp": "^0.29.0",
+    "svg-sprite-loader": "^6.0.9",
+    "typescript": "4.3.5",
+    "webp-loader": "^0.6.0"
   }
 }
