--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@emotion/css": "^11.1.3",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@react-spring/parallax": "^9.2.4",
     "cookie": "^0.4.1",
+    "e": "^0.2.1",
     "embla-carousel": "^4.5.3",
     "framer-motion": "^4.1.17",
+    "gsap": "^3.7.1",
+    "lodash-es": "^4.17.21",
     "next": "11.0.1",
     "next-optimized-images": "^2.6.2",
     "object-hash": "^2.2.0",
@@ -26,11 +30,16 @@
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
     "react-draggable": "^4.4.3",
+    "react-gsap": "^3.2.1",
     "react-intersection-observer": "^8.32.0",
     "react-player": "^2.9.0",
     "react-responsive": "^9.0.0-beta.3",
     "react-responsive-carousel": "^3.2.20",
     "react-scroll": "^1.8.4",
+    "react-scrollmagic": "^2.3.0",
+    "react-spring": "^9.2.4",
+    "react-spring-scroll-to-hook": "^1.0.3",
+    "react-use-gesture": "^9.1.3",
     "sass": "^1.36.0",
     "smooth-scroll": "^16.1.3",
     "use-persisted-state": "^0.3.3"
