--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/css": "^11.1.3",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@fullpage/react-fullpage": "^0.1.19",
     "@react-spring/parallax": "^9.2.4",
     "cookie": "^0.4.1",
     "e": "^0.2.1",
@@ -24,6 +25,7 @@
     "next": "11.0.1",
     "next-optimized-images": "^2.6.2",
     "object-hash": "^2.2.0",
+    "parallax-js": "^3.1.0",
     "popmotion": "^9.4.0",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
@@ -41,6 +43,7 @@
     "react-spring-scroll-to-hook": "^1.0.3",
     "react-use-gesture": "^9.1.3",
     "sass": "^1.36.0",
+    "skrollr": "^0.6.26",
     "smooth-scroll": "^16.1.3",
     "use-persisted-state": "^0.3.3"
   },
