--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   next_dev:
     build: .
-    command: npm run dev
+    command: tail -F foo
     volumes:
       - .:/usr/app/
     ports:
