--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -4,19 +4,15 @@
 name: app
 
 # The type key specifies the language and version for your application.
-type: 'nodejs:14'
-
-dependencies:
-    nodejs:
-        yarn: "^1.22.0"
+type: 'nodejs:15'
 
 # The hooks that will be triggered when the package is deployed.
 hooks:
-    # The build hook runs after yarn has been downloaded.
+    # The build hook runs after container dependencies are available.
     # No services are available but the disk is writeable.
     build: |
-        yarn
-        yarn build
+        npm install
+        npm run build
         # Move committed files in soon-to-be mounts into temp directory.
         chmod +x handle_mounts.sh
         ./handle_mounts.sh
