--- a/.platform/routes.yaml
+++ b/.platform/routes.yaml
@@ -6,6 +6,14 @@
 "https://{default}/":
     type: upstream
     upstream: "app:http"
+    redirects:
+        expires: 1d
+        paths:
+            # Remove trailing slash from routes. Combine this with rule in
+            # .platform.app.yaml to add ".html" to the URLs internally.
+            '^/([^.]+)/$':
+                to: 'https://{default}/$1'
+                regexp: true
 
 "https://www.{default}/":
     type: redirect
