EAEC-37: Improve route collision detection script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
-    "postbuild": "./script.sh",
+    "postbuild": "./scripts/nextjs-fix-route-collisions.sh",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "npx patch-package "
