--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -15,8 +15,8 @@ hooks:
         npm install
         npm run build
         # Move committed files in soon-to-be mounts into temp directory.
-        chmod +x handle_mounts.sh
-        ./handle_mounts.sh
+        chmod +x scripts/platformsh_handle_mounts.sh
+        ./scripts/platformsh_handle_mounts.sh
         ls -al /app/out
     # The deploy hook runs after your application has been deployed and started.
     # Code cannot be modified at this point but the database is available.
@@ -25,7 +25,7 @@ hooks:
     deploy: |
         set -x
         # Move committed files from temp directory back into mounts.
-        ./handle_mounts.sh
+        ./scripts/platformsh_handle_mounts.sh
         ls -al /app/out
 
 # Configure the web server to serve our static site.
