EAEC-45: Add SITE_URL for sitemap gen in docker & platform environments
Note 1: the next_dev environment does not currently utilize this variable because
sitemap is only built in the next_prod build task.

Note 2:  the prod url is hardcoded in platform.app.yaml because we
dont need to be pointing people to the development environments which
should be password protected anyway.

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -6,6 +6,11 @@ name: app
 # The type key specifies the language and version for your application.
 type: 'nodejs:15'
 
+# Define environment variables used in all environments.
+variables:
+    env:
+        SITE_URL: "https://2036.emory.edu"
+
 # The hooks that will be triggered when the package is deployed.
 hooks:
     # The build hook runs after container dependencies are available.
