--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "postbuild": "./scripts/nextjs-fix-route-collisions.sh && next-sitemap",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "npx patch-package "
+    "postinstall": "npx patch-package ",
+    "css:lint": "npx stylelint styles/**/*.scss"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.6.5",
@@ -47,6 +48,8 @@
     "sass": "^1.36.0",
     "skrollr": "^0.6.26",
     "smooth-scroll": "^16.1.3",
+    "stylelint": "^13.13.1",
+    "stylelint-scss": "^3.21.0",
     "use-persisted-state": "^0.3.3"
   },
   "devDependencies": {
