--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-cookie": "^4.1.1",
+    "react-device-detect": "^2.0.1",
     "react-dom": "17.0.2",
     "react-draggable": "^4.4.3",
     "react-gsap": "^3.2.1",
