--- a/package.json
+++ b/package.json
@@ -59,8 +59,10 @@
     "@types/react": "17.0.15",
     "@types/react-scroll": "^1.8.3",
     "@types/smooth-scroll": "^16.1.1",
+    "chalk": "^4.1.2",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
+    "glob": "^7.2.0",
     "image-trace-loader": "^1.0.2",
     "imagemin-gifsicle": "^7.0.0",
     "imagemin-mozjpeg": "^9.0.0",
