--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@iconify/react": "^3.0.0-beta.1",
+    "@types/node": "^18.11.2",
     "@types/object-hash": "^2.1.1",
     "@types/react": "17.0.15",
     "@types/react-scroll": "^1.8.3",
