fix bug related to static files

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -72,3 +72,7 @@ mounts:
     '/.next':
         source: local
         source_path: 'next'
+
+    "/out":
+        source: local
+        source_path: "out"
