--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.3.0",
     "@fullpage/react-fullpage": "^0.1.19",
     "@react-spring/parallax": "^9.2.4",
+    "classnames": "^2.3.2",
     "cookie": "^0.4.1",
     "e": "^0.2.1",
     "embla-carousel": "^4.5.3",
