--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -4,67 +4,48 @@
 name: app
 
 # The type key specifies the language and version for your application.
-type: 'nodejs:15'
+type: "nodejs:15"
 
 # Define environment variables used in all environments.
 variables:
-    env:
-        SITE_URL: "https://2036.emory.edu"
+  env:
+    SITE_URL: "https://2036.emory.edu"
 
 # The hooks that will be triggered when the package is deployed.
 hooks:
-    # The build hook runs after container dependencies are available.
-    # No services are available but the disk is writeable.
-    build: |
-        set -x
-        npm install
-        npm run build
-        # Move committed files in soon-to-be mounts into temp directory.
-        chmod +x scripts/platformsh_handle_mounts.sh
-        ./scripts/platformsh_handle_mounts.sh
-        ls -al /app/out
-    # The deploy hook runs after your application has been deployed and started.
-    # Code cannot be modified at this point but the database is available.
-    # The site is not accepting requests while this script runs so keep it
-    # fast.
-    deploy: |
-        set -x
-        # Move committed files from temp directory back into mounts.
-        ./scripts/platformsh_handle_mounts.sh
-        ls -al /app/out
-
+  # The build hook runs after container dependencies are available.
+  # No services are available but the disk is writeable.
+  build: |
+    set -x
+    npm install
+    npm run build
+    # Move committed files in soon-to-be mounts into temp directory.
+    chmod +x scripts/platformsh_handle_mounts.sh
+    ./scripts/platformsh_handle_mounts.sh
+    # ls -al /app/out
+  # The deploy hook runs after your application has been deployed and started.
+  # Code cannot be modified at this point but the database is available.
+  # The site is not accepting requests while this script runs so keep it
+  # fast.
+  deploy: |
+    set -x
+    # Move committed files from temp directory back into mounts.
+    ./scripts/platformsh_handle_mounts.sh
+    # ls -al /app/out
 # Configure the web server to serve our static site.
 web:
-    commands:
-        # Run a no-op process that uses no CPU resources, since this is a static site.
-        start: sleep infinity
-    locations:
-        "/":
-            root: "out"
-            index:
-                - "index.html"
-            expires: 5m
-            rules:
-                # Add ".html" to URLs without any file extension.
-                # This is required for links and routes inside the next static
-                # app to work properly.
-                '^([^.]+)$':
-                    passthru: '/$1.html'
-                # Expire static assets after 2 weeks.
-                '\.(jpe?g|png|webp|webm|webmanifest|mp4|mp3|gif|svgz?|ico|eot|woff2?|otf|ttf?|xml|pdf)$':
-                    expires: 2w
-                # Expire javascript & css assets after 1 month.
-                '\.(js|css)$':
-                    expires: 1m
-
+  commands:
+    start: npx next start
 
 # The size of the persistent disk of the application (in MB).
 disk: 5120
 
-# The mounts that will be performed when the package is deployed.
 mounts:
-    # `npm run build` internally leverages `next export` which outputs a static
-    # build artifact to the "out" folder.
-    "/out":
-        source: local
-        source_path: "out"
+  # Next.js will try to cache files, so it must be writeable.
+  "/.next":
+    source: local
+    source_path: "next"
+
+  "/out":
+    source: local
+    source_path: "out"
