--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "embla-carousel": "^4.5.3",
     "framer-motion": "^4.1.17",
     "gsap": "^3.7.1",
+    "hash-sum": "^2.0.0",
     "lodash-es": "^4.17.21",
     "next": "11.0.1",
     "next-optimized-images": "^2.6.2",
