--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   next_dev:
     build: .
@@ -17,6 +17,7 @@ services:
       - "3000:3000"
     environment:
       - SITE_URL=http://localhost:3000/
+
   next_prod:
     build: .
     command: http-server out/
@@ -35,3 +36,21 @@ services:
       - "8080:8080"
     environment:
       - SITE_URL=http://localhost:8080/
+
+  next_staging:
+    build: .
+    command: sleep infinity
+    volumes:
+      # Mount the current project folder from the host
+      # OS into the container.
+      - .:/usr/app/
+      # Isolate node modules folder per environment
+      # so that `npm install` on the host OS, does
+      # not collide with the executables installed
+      # inside the container.
+      - /usr/app/node_modules
+    restart: unless-stopped
+    ports:
+      - "3000:3000"
+    environment:
+      - SITE_URL=http://localhost:3000/
